added to talking points

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
     - Susan's idea (could we ask Joe, Erin, and/or Charlotte if they would be interested in preparing this talk?)
     - How to include an image in the preview of a post in blogdown?
     - Are you still available to talk next week?
+    - Cookies for tomorrow?
 
 ## To Do List
 
